Add primitive tracking and visualization.

--- a/vehicle_tracker/sandbox.ipynb
+++ b/vehicle_tracker/sandbox.ipynb
@@ -2,17 +2,81 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true,
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[0, 1, 2],\n       [1, 0, 2],\n       [1, 2, 0]])"
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "from scipy.optimize import linear_sum_assignment\n",
+    "\n",
+    "cost = np.array([\n",
+    "    [0, 1, 2],\n",
+    "    [1, 0, 2],\n",
+    "    [1, 2, 0]\n",
+    "])\n",
+    "cost"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(array([0, 1, 2]), array([0, 1, 2], dtype=int64))"
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "row_ind, col_ind = linear_sum_assignment(cost)\n",
+    "row_ind, col_ind"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([0, 1, 2])"
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "row_ind"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
