--- a/vehicle_tracker/sandbox.ipynb
+++ b/vehicle_tracker/sandbox.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -14,13 +14,14 @@
      "data": {
       "text/plain": "array([[0, 1, 2],\n       [1, 0, 2],\n       [1, 2, 0]])"
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import numpy as np\n",
+    "import cv2 as cv\n",
     "from scipy.optimize import linear_sum_assignment\n",
     "\n",
     "cost = np.array([\n",
@@ -33,13 +34,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "outputs": [
     {
      "data": {
       "text/plain": "(array([0, 1, 2]), array([0, 1, 2], dtype=int64))"
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,19 +58,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "outputs": [
     {
      "data": {
       "text/plain": "array([0, 1, 2])"
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "row_ind"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(179, 22)\n"
+     ]
+    }
+   ],
+   "source": [
+    "image = cv.imread('../data/cars.jpg')\n",
+    "\n",
+    "def draw_labeled_rectangle(image, start_point, end_point, label, color):\n",
+    "    (x1, y1), (x2, y2) = start_point, end_point\n",
+    "\n",
+    "    font_face = cv.FONT_HERSHEY_COMPLEX\n",
+    "    font_scale = 1\n",
+    "    font_thickness = 1\n",
+    "\n",
+    "    text_size, _ = cv.getTextSize(label, font_face, font_scale, font_thickness)\n",
+    "    print(text_size)\n",
+    "    width, height = x2 - x1, y2 - y1\n",
+    "    roi = image[y1:y2, x1:x2]\n",
+    "    rect = np.ones_like(roi) * 255\n",
+    "    res = cv.addWeighted(roi, 0.5, rect, 0.5, 0)\n",
+    "    image[y1:y2, x1:x2] = res\n",
+    "\n",
+    "draw_labeled_rectangle(image, (100, 100), (400, 400), 'something', None)\n",
+    "\n",
+    "cv.imshow('Preview', image)\n",
+    "cv.waitKey(0)\n",
+    "cv.destroyAllWindows()"
    ],
    "metadata": {
     "collapsed": false,
