Implement eye-candy labele BBOX drawing.

--- a/vehicle_tracker/sandbox.ipynb
+++ b/vehicle_tracker/sandbox.ipynb
@@ -2,23 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "collapsed": true,
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "array([[0, 1, 2],\n       [1, 0, 2],\n       [1, 0, 2]])"
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import cv2 as cv\n",
@@ -34,17 +25,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "(array([0, 1, 2]), array([0, 1, 2], dtype=int64))"
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "row_ind, col_ind = linear_sum_assignment(cost)\n",
     "row_ind, col_ind"
@@ -58,17 +40,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "array([0, 1, 2])"
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "row_ind"
    ],
@@ -81,47 +54,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(179, 22)\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'NoneType' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
-      "\u001B[1;32m<ipython-input-14-9c4d11b18252>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m     16\u001B[0m     \u001B[0mimage\u001B[0m\u001B[1;33m[\u001B[0m\u001B[0my1\u001B[0m\u001B[1;33m:\u001B[0m\u001B[0my2\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mx1\u001B[0m\u001B[1;33m:\u001B[0m\u001B[0mx2\u001B[0m\u001B[1;33m]\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mres\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     17\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 18\u001B[1;33m \u001B[0mdraw_labeled_rectangle\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mimage\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;33m(\u001B[0m\u001B[1;36m100\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;36m100\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;33m(\u001B[0m\u001B[1;36m400\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;36m400\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;34m'something'\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;32mNone\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     19\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     20\u001B[0m \u001B[0mcv\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mimshow\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;34m'Preview'\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mimage\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;32m<ipython-input-14-9c4d11b18252>\u001B[0m in \u001B[0;36mdraw_labeled_rectangle\u001B[1;34m(image, start_point, end_point, label, color)\u001B[0m\n\u001B[0;32m     11\u001B[0m     \u001B[0mprint\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mtext_size\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     12\u001B[0m     \u001B[0mwidth\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mheight\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mx2\u001B[0m \u001B[1;33m-\u001B[0m \u001B[0mx1\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0my2\u001B[0m \u001B[1;33m-\u001B[0m \u001B[0my1\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 13\u001B[1;33m     \u001B[0mroi\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mimage\u001B[0m\u001B[1;33m[\u001B[0m\u001B[0my1\u001B[0m\u001B[1;33m:\u001B[0m\u001B[0my2\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mx1\u001B[0m\u001B[1;33m:\u001B[0m\u001B[0mx2\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     14\u001B[0m     \u001B[0mrect\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mnp\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mones_like\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mroi\u001B[0m\u001B[1;33m)\u001B[0m \u001B[1;33m*\u001B[0m \u001B[1;36m255\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     15\u001B[0m     \u001B[0mres\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mcv\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0maddWeighted\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mroi\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;36m0.5\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mrect\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;36m0.5\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;36m0\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;31mTypeError\u001B[0m: 'NoneType' object is not subscriptable"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "image = cv.imread('../data/cars.jpg')\n",
     "\n",
-    "def draw_labeled_rectangle(image, start_point, end_point, label, color):\n",
+    "def draw_labeled_rectangle(\n",
+    "        image, start_point, end_point, label, rect_color, label_color,\n",
+    "        alpha=0.8):\n",
     "    (x1, y1), (x2, y2) = start_point, end_point\n",
+    "\n",
+    "    roi = image[y1:y2, x1:x2]\n",
+    "    rect = np.ones_like(roi) * 255\n",
+    "    image[y1:y2, x1:x2] = cv.addWeighted(roi, alpha, rect, 1 - alpha, 0)\n",
     "\n",
     "    font_face = cv.FONT_HERSHEY_COMPLEX\n",
     "    font_scale = 1\n",
     "    font_thickness = 1\n",
     "\n",
-    "    text_size, _ = cv.getTextSize(label, font_face, font_scale, font_thickness)\n",
-    "    print(text_size)\n",
-    "    width, height = x2 - x1, y2 - y1\n",
-    "    roi = image[y1:y2, x1:x2]\n",
-    "    rect = np.ones_like(roi) * 255\n",
-    "    res = cv.addWeighted(roi, 0.5, rect, 0.5, 0)\n",
-    "    image[y1:y2, x1:x2] = res\n",
+    "    (text_width, text_height), baseline = cv.getTextSize(\n",
+    "        label, font_face, font_scale, font_thickness)\n",
+    "    text_rect_end = (\n",
+    "        start_point[0] + text_width, start_point[1] + text_height + baseline)\n",
+    "    cv.rectangle(image, start_point, text_rect_end, rect_color, -1)\n",
     "\n",
-    "draw_labeled_rectangle(image, (100, 100), (400, 400), 'something', None)\n",
+    "    text_start_point = (start_point[0], start_point[1] + text_height)\n",
+    "    cv.putText(\n",
+    "        image, label, text_start_point, font_face, font_scale, label_color,\n",
+    "        font_thickness, cv.LINE_AA)\n",
+    "    cv.rectangle(image, start_point, end_point, rect_color, 2, cv.LINE_AA)\n",
+    "\n",
+    "draw_labeled_rectangle(\n",
+    "    image, (100, 100), (400, 400), 'something', (0, 255, 0), (0, 0, 0))\n",
     "\n",
     "cv.imshow('Preview', image)\n",
     "cv.waitKey(0)\n",
