--- a/vehicle_tracker/sandbox.ipynb
+++ b/vehicle_tracker/sandbox.ipynb
@@ -13,7 +13,8 @@
    "source": [
     "import cv2 as cv\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.spatial.distance import cosine"
    ]
   },
   {
@@ -34,7 +35,7 @@
     "                         (1 - self.friction) * (position - self.position))\n",
     "        self.position += self.velocity\n",
     "\n",
-    "def rand_position_step(a=-1, b=2):\n",
+    "def rand_position_step(a=-1, b=1):\n",
     "    return np.random.random(2) * (b - a) + a\n",
     "\n",
     "position = np.array([0, 0], dtype=np.float)\n",
@@ -48,9 +49,11 @@
     "for i in iterations:\n",
     "    positions_real.append(position.copy())\n",
     "    positions_model.append(model.position.copy())\n",
+    "    prev_velocity = model.velocity.copy()\n",
     "    step = rand_position_step()\n",
     "    position += step\n",
     "    model.update(position)\n",
+    "    print(f'{prev_velocity} {model.velocity} {cosine(prev_velocity, model.velocity)}')\n",
     "\n",
     "positions_real = np.array(positions_real)\n",
     "positions_model = np.array(positions_model)\n",
@@ -59,6 +62,22 @@
     "plt.scatter(positions_model[:, 0], positions_model[:, 1], s=10, label='model')\n",
     "plt.legend()\n",
     "plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "a = np.array([0.10213743, 0.15590724])\n",
+    "b = np.array([0.10946584, -0.13720738])\n",
+    "np.sum(a * b) / (np.linalg.norm(a) * np.linalg.norm(b))\n"
    ],
    "metadata": {
     "collapsed": false,
