--- a/vehicle_tracker/sandbox.ipynb
+++ b/vehicle_tracker/sandbox.ipynb
@@ -201,27 +201,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "import json\n",
     "\n",
     "config = {\n",
     "    'detector': {\n",
-    "        'config_file_path': '',\n",
-    "        'weights_file_path': '',\n",
-    "        'labels_file_path': '',\n",
+    "        'config_file_path': '../model/yolov3.cfg',\n",
+    "        'weights_file_path': '../model/yolov3.weights',\n",
+    "        'labels_file_path': '../model/coco.names',\n",
     "        'score_thresh': 0.5,\n",
     "        'nms_thresh': 0.3,\n",
     "        'use_gpu': False,\n",
     "    },\n",
     "    'tracker': {\n",
-    "        'config_file_path': '',\n",
-    "        'weights_file_path': '',\n",
-    "        'emb_dist_thresh': 0.5,\n",
+    "        'config_file_path': '../model/embedding_model_layout.json',\n",
+    "        'weights_file_path': '../model/embedding_model_weights.h5',\n",
+    "        'iou_dist_thresh': 0.7,\n",
+    "        'emb_dist_thresh': 0.2,\n",
+    "        'max_no_update_count': 30,\n",
     "    }\n",
-    "}"
+    "}\n",
+    "\n",
+    "with open('../config_files/config_05.json', 'wt') as json_file:\n",
+    "    json_file.write(json.dumps(config, indent=2))"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
