--- a/vehicle_tracker/sandbox.ipynb
+++ b/vehicle_tracker/sandbox.ipynb
@@ -503,26 +503,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "outputs": [
     {
-     "data": {
-      "text/plain": "{'a': array([1, 2]), 'b': array([3, 4]), 'c': array([5, 6])}"
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[158.   1.  66.]\n",
+      "[216.44444444  67.22222222  77.66666667]\n",
+      "[246.         123.44444444  73.66666667]\n",
+      "[253.33333333 190.66666667 111.        ]\n",
+      "[254.44444444 237.77777778 162.11111111]\n",
+      "[241.11111111 249.44444444 169.33333333]\n",
+      "[190.66666667 229.         160.        ]\n",
+      "[117.33333333 200.         164.77777778]\n",
+      "[ 55.77777778 142.44444444 186.33333333]\n",
+      "[ 94.  79. 162.]\n"
+     ]
     }
    ],
    "source": [
-    "a = ['a', 'b', 'c']\n",
-    "d = np.array([\n",
-    "    [1, 2],\n",
-    "    [3, 4],\n",
-    "    [5, 6]\n",
-    "])\n",
+    "def get_cmap(n, name='Spectral'):\n",
+    "    '''Returns a function that maps each index in 0, 1, ..., n-1 to a distinct\n",
+    "    RGB color; the keyword argument name must be a standard mpl colormap name.'''\n",
+    "    return plt.cm.get_cmap(name, n)\n",
     "\n",
-    "dict(zip(a, d))"
+    "n = 10\n",
+    "cmap = get_cmap(n)\n",
+    "for i in range(n):\n",
+    "    color = np.array(cmap(i)[:3]) * 255\n",
+    "    print(color)\n",
+    "    img = (np.ones((500, 500, 3)) * color).astype(np.uint8)\n",
+    "    image_show(img)"
    ],
    "metadata": {
     "collapsed": false,
